# Formatter

./: .gitignore  Contributing.md  HowToWriteRules.md  HowToWriteRules_ru.md  LICENSE  README.md  README_ru.md  build.gradle.kts  settings.gradle.kts
.gigaide/: gigaide.properties
.github/workflows/: ci.yml
docs/checkpoint1/: InterimDocumentationForCheckpoint1.md
docs/ru/manuals/: Contributing_ru.md  README_ru.md
gradle/wrapper/: gradle-wrapper.properties
simple_formatter/: input.txt  output.txt  pyproject.toml  settings.gradle.kts
simple_formatter/gradle/wrapper/: gradle-wrapper.properties
simple_formatter/src/main/java/org/example/: Main.java
simple_formatter/src/test/java/: FormatterTest.java
simple_formatter/src/test/python/: loader.py  test_formatter.py
simple_formatter/src/test/resources/: tests.yaml
src/main/antlr/: OldEbnf.g4  SqlLikeRequest.g4  SqlLikeRequestLexer.g4  SqlLikeRequestParser.g4  TSqlLexer.g4  ebnf.g4
src/main/java/org/example/: Hello.g4  IfVisitor.java  JavaFormatter.java  JavaFormatterCli.java  Main.java
src/main/java/org/example/HardCodeIfVisitor/: IfVisitor.java
src/main/java/org/example/rules/: RuleAstBuilder.java
src/main/java/org/example/sql/: Sql.g4
src/main/java/org/example/sqlLikeRequest/: ExprEvaluator.java  Match.java  OutputRenderer.java  (+3 more)
src/test/java/org/example/: DetectingConstructionsInAstJavaParserTest.java  DetectingPartsOfEbnfAstRuleTest.java  EbnfRuleToAstTest.java  IfVisitorHardCodedTest.java  JavaFormatterCliTest.java  JavaFormatterTest.java  JavaParserTest.java  SqlAstServiceTest.java
(+70 files in other folders)
